--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name= ".NotificationPublisher" />
+        <receiver android:name= ".notifications.NotificationPublisher" />
     </application>
 
 </manifest>
